--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ class: inverse, middle left
 
 --
 
-### Collaboration avec les insitutions partenaires
+### Collaboration avec les institutions partenaires
 
 --
 
